# hubris

./: CLAUDE.md  Cargo.toml  run-gdb-debug.sh  run-gdb.sh  run-qemu-debug.sh  run-qemu-i2c-scaffold-app.sh  run-qemu.sh
.github/: copilot-instructions.md
app/ast1060-i2c-scaffold/: app-ast1060.toml  app-mock.toml  app.toml
app/ast1060-mctp-echo/: Cargo.toml  README.md  app.toml
app/ast1060-spdm-responder/: Cargo.toml  README.md  app.toml
app/ast1060-spdm-responder/src/: main.rs
app/ast1060-starter/: Cargo.toml  DIGEST_INTEGRATION.md  DIGEST_SUMMARY.md  README.md  app.toml
app/ast1060-starter/src/: main.rs
chips/ast1060/: chip.toml
drv/digest-api/: Cargo.toml  build.rs
drv/digest-api/src/: lib.rs
drv/digest-server/: Cargo.toml  README.md  build.rs  owned_api_optimization.md
drv/digest-server/src/: main.rs
drv/i2c-server-generic/: Cargo.toml  build.rs
drv/i2c-server-generic/examples/: test_mock.rs
drv/i2c-server-generic/src/: lib.rs  main.rs
drv/i2c-types/src/: lib.rs  mock.rs
drv/lpc55-usart/: Cargo.toml
drv/openprot-i2c-server/: Cargo.toml
drv/openprot-i2c-server/src/: ast1060_hardware.rs  main.rs  openprot_adapter.rs  types.rs
drv/stm32xx-i2c/: Cargo.toml
drv/stm32xx-i2c-server/: crate-partition.md
drv/stm32xx-i2c-server/src/: main.rs
drv/stm32xx-i2c/src/: lib.rs  mux_adapters.rs  pca9545.rs  pca9548.rs
idl/: digest.idol  hmac.idol  mctp.idol
lib/ast1060-uart/: Cargo.toml
lib/ast1060-uart/src/: lib.rs
task/helloworld/: Cargo.toml
task/helloworld/src/: main.rs
task/hmac-api/: Cargo.toml  build.rs
task/hmac-api/src/: lib.rs
task/mctp-api/: Cargo.toml  build.rs
task/mctp-api/src/: lib.rs
task/mctp-echo/: Cargo.toml  README.mkdn
task/mctp-echo/src/: main.rs
task/mctp-server/: Cargo.toml  README.mkdn  build.rs
task/mctp-server/src/: main.rs  serial.rs  server.rs
task/spdm-resp/: Cargo.toml
task/spdm-resp/src/: main.rs
