[package]
name = "digest-server"
version = "0.1.0"
edition = "2021"

[features]
default = ["mock"]
mock = ["openprot-platform-mock"]
aspeed-hace = ["aspeed-ddk", "ast1060-pac", "embedded-hal-1", "proposed-traits"]

[dependencies]
userlib = { path = "../../sys/userlib" }
idol-runtime = { workspace = true }
drv-digest-api = { path = "../digest-api" }

# Core dependencies
zerocopy = { workspace = true }
heapless = { workspace = true }
cortex-m = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }

# Logging and debugging
ringbuf = { path = "../../lib/ringbuf" }
counters = { path = "../../lib/counters" }
openprot-hal-blocking = { workspace = true }
openprot-platform-mock = { workspace = true, optional = true }

# Hardware-specific dependencies
aspeed-ddk = { workspace = true, optional = true }
ast1060-pac = { workspace = true, optional = true }
embedded-hal-1 = { workspace = true, optional = true }
proposed-traits = { workspace = true, optional = true }

[lints]
workspace = true

[build-dependencies]
build-util = { path = "../../build/util" }
idol = { workspace = true }
