[package]
name = "drv-i2c-server-generic"
version = "0.1.0"
edition = "2021"

[dependencies]
bitfield = { workspace = true }
cfg-if = { workspace = true }
num-traits = { workspace = true }
zerocopy = { workspace = true }
zerocopy-derive = { workspace = true }

drv-i2c-api = { path = "../i2c-api" }
drv-i2c-types = { path = "../i2c-types" }
ringbuf = { path = "../../lib/ringbuf" }
counters = { path = "../../lib/counters" }
userlib = { path = "../../sys/userlib" }
fixedmap = { path = "../../lib/fixedmap" }
idol-runtime = { workspace = true }

# STM32-specific dependencies (only when using STM32 backend)
stm32g0 = { workspace = true, optional = true }
stm32h7 = { workspace = true, optional = true }
drv-stm32xx-sys-api = { path = "../stm32xx-sys-api", optional = true }
drv-stm32xx-i2c = { path = "../stm32xx-i2c", optional = true }

[features]
default = ["mock"]

# Backend selection (exactly one must be chosen)
mock = []
stm32 = ["dep:drv-stm32xx-sys-api", "dep:drv-stm32xx-i2c"]

# STM32 chip variants (only used with stm32 backend)
h743 = ["stm32h7/stm32h743", "drv-stm32xx-sys-api?/h743", "drv-stm32xx-i2c?/h743"]
h753 = ["stm32h7/stm32h753", "drv-stm32xx-sys-api?/h753", "drv-stm32xx-i2c?/h753"]
g031 = ["stm32g0/stm32g031", "drv-stm32xx-sys-api?/g031", "drv-stm32xx-i2c?/g031"]
g030 = ["stm32g0/stm32g030", "drv-stm32xx-sys-api?/g030", "drv-stm32xx-i2c?/g030"]
amd_erratum_1394 = ["drv-stm32xx-i2c?/amd_erratum_1394"]

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[lib]
test = false
doctest = false
bench = false

[build-dependencies]
build-i2c = { path = "../../build/i2c", optional = true }
build-util = { path = "../../build/util" }

[lints]
workspace = true