[package]
name = "drv-mock-i2c"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "drv-mock-i2c"
path = "src/main.rs"


[dependencies]
bitfield = { workspace = true }
cortex-m = { workspace = true }
embedded-hal = { workspace = true }
zerocopy = { workspace = true }
zerocopy-derive = { workspace = true }
heapless = { workspace = true }

drv-i2c-api = { path = "../i2c-api" }
drv-i2c-types = { path = "../i2c-types" }
ringbuf = { path = "../../lib/ringbuf" }
counters = { path = "../../lib/counters" }
userlib = { path = "../../sys/userlib" }
fixedmap = { path = "../../lib/fixedmap" }

## OpenPRot
openprot-hal-blocking.workspace = true
openprot-platform-mock = { workspace = true, optional = true }

## ASPEED DDK
aspeed-ddk = { workspace = true, optional = true }

[build-dependencies]
build-util = { path = "../../build/util" }

[features]
default = ["mock"]
ast1060 = ["aspeed-ddk"]
i2c_target = ["aspeed-ddk/i2c_target"]
mock = ["openprot-platform-mock"] # Keep for testing

[lints]
workspace = true