[package]
name = "mctp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
userlib = { path = "../../sys/userlib", features = ["panic-messages"] }
idol-runtime = { workspace = true }
counters = { path = "../../lib/counters" }
num-traits = { workspace = true }
serde = { workspace = true }
hubpack = { workspace = true }
zerocopy = { workspace = true }
zerocopy-derive = { workspace = true }
mctp-api = { path = "../mctp-api" }
mctp-estack = { git = "https://github.com/9elements/mctp-rs.git", branch = "leongross/serial-sync" }
mctp-stack = { path = "../../../mctp-lib", package = "mctp-baremetal" }
mctp = { workspace = true }

[build-dependencies]
idol = { workspace = true }

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "mctp-server"
test = false
doctest = false
bench = false

[lints]
workspace = true
